tests/lustre/typechecking/shouldFail/machine_integer_04.lus

node top(x: int) returns (y:int);
let
   y = x lsh 4;
tel